# Solenoid

./: .eslintrc.cjs  .gitignore  CLAUDE.md  PYTHON_FILE_OVERVIEW.md  README.md  TYPESCRIPT_CONVERSION_PLAN.md  agent.md  agent_details.txt  app_settings.yaml  biome.json  claude.md  inspect_adk.py  inspect_agent.py  inspect_agent_fields.py  inspect_response.py  local_responses.db  local_responses.db-shm  local_responses.db-wal  main_bundled.py  mcp_config.yaml  memories.db  memories.db-shm  memories.db-wal  package-lock.json  package.json  pyproject.toml  requirements.txt  response_details.txt  test_compaction.py  test_config_models.py  test_litellm_backend.py  test_output.txt  test_responses_normalization.py  test_theme.py  tsconfig.json
.github/workflows/: test-node.yml
agents/: .gitkeep  _example.yaml  llm_efficiency_expert.yaml
app/: main.py
app/agent/: config.py  memories.db  memories.db-shm  memories.db-wal
app/server/: __init__.py  main.py  manager.py
app/settings/: __init__.py  manager.py  validator.py
app/ui/: agent_app.py
docs/: DYNAMIC_AGENTS_IMPLEMENTATION_PLAN.md  EVALUATION_REPORT.md
local_backend/: app.py  google_adk_backend.py  tool_parsing.py
local_backend/store/: __init__.py
local_general_agent/: __init__.py  app.py  config.py  main.py  settings_agent.py  shell_agent.py  theme.py
local_general_agent/config/: settings.json
local_responses/: MODEL_EXECUTION.md  __init__.py  __main__.py  adapter_responses.py  app.py  config.py  schemas.py  tool_parsing.py
local_responses/backends/: __init__.py  google_adk_backend.py  litellm_backend.py  llamacpp_backend.py  mlx_backend.py
local_responses/compaction/: __init__.py
local_responses/prompts/: system.txt
local_responses/store/: db.py
memory/: search.py
resources/: backend_config.py  default_settings.py
scripts/: generate-formula-resources.sh  release.sh
solenoid-node/: .gitignore  package-lock.json  package.json  to_test.md  tsconfig.json  vitest.config.ts
solenoid-node/src/: cli.ts  index.ts
src/: cli.ts  index.ts
src/ag-ui/: encoder.ts
src/agents/: chart-generator.ts  code-executor.ts  factory.ts  generic.ts  index.ts  mcp.ts  planning.ts  research.ts  runner.ts  types.ts
src/charts/: tools.ts  types.ts
src/config/: generator.ts  index.ts  settings.ts  settingsManager.ts  validator.ts
src/llm/: ollama-adk.ts  ollama.ts  types.ts
src/mcp/: manager.ts
src/memory/: callbacks.ts  database.ts  embeddings.ts  index.ts  search.ts  service.ts
src/sandbox/: index.ts  pyodide-engine.ts
src/tools/: adk-tools.ts  brave-search.ts  code-execution.ts  mcp-adk-adapter.ts  web-reader.ts
src/types/: marked-terminal.d.ts  pyodide.d.ts
src/ui/: app.tsx  index.tsx
src/utils/: logger.ts
tests/: setup.ts
tests/agents/: base-agent.test.ts
tests/config/: generator.test.ts  (+1 more)
(+163 files in other folders)
