[tool.poetry]
name = "local-general-agent"
version = "0.1.0"
description = "A configurable terminal application with Solarized theming and slash command support"
readme = "README.md"
authors = []
packages = [
    { include = "local_general_agent" },
    { include = "local_responses" },
    { include = "memory" },
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
google-adk = "^1.18.0"
textual = "^6.5.0"
numpy = "^2.3.4"
sentence-transformers = "^5.1.2"
sqlite-vec = "^0.1.6"
pydantic = "^2.12.4"
litellm = "^1.79.3"


[tool.poetry.group.dev.dependencies]
httpx = ">=0.27.0"
pytest = ">=8.1.0"

[tool.poetry.scripts]
terminal-app = "app.main"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"


