[tool.poetry]
name = "solenoid"
version = "0.1.0"
description = "A configurable terminal application with Solarized theming and slash command support"
readme = "README.md"
authors = []
packages = [
    { include = "app" },
    { include = "main_bundled.py" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
google-adk = "^1.18.0"
textual = "^6.5.0"
numpy = "^2.3.4"
sentence-transformers = "^5.1.2"
sqlite-vec = "^0.1.6"
pydantic = "^2.12.4"
litellm = "^1.79.3"
wasmtime = "^39.0.0"
ag-ui-adk = "^0.3.6"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = ">=0.35.0"}
httpx = ">=0.27.0"
einops = "^0.8.1"
flagembedding = "^1.3.5"
transformers = ">=4.45,<5"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.1.0"

[tool.poetry.scripts]
terminal-app = "app.main:main"
local-agent = "main_bundled:main"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

